INTYGFV-16128: Doctor name should be sorted alphabetically